[gd_scene load_steps=22 format=3 uid="uid://dncxcr3l1rkyy"]

[ext_resource type="Script" path="res://scenes/game_object/mushroom_enemy/mushroom_enemy.gd" id="1_vi4kp"]
[ext_resource type="PackedScene" uid="uid://dc3iq11ql08qr" path="res://scenes/component/status_effect_component.tscn" id="2_jlov5"]
[ext_resource type="PackedScene" uid="uid://b107ymbechs3d" path="res://scenes/component/health_component.tscn" id="3_p8u6a"]
[ext_resource type="PackedScene" uid="uid://bw4wna6pvviqs" path="res://scenes/component/velocity_component.tscn" id="4_kjeee"]
[ext_resource type="PackedScene" uid="uid://bhp76acdvk38j" path="res://scenes/component/vial_drop_component.tscn" id="5_yhe14"]
[ext_resource type="PackedScene" uid="uid://cpwyeh6ioddx6" path="res://scenes/component/hit_flash_component.tscn" id="6_cume1"]
[ext_resource type="Shader" path="res://scenes/vfx/whiten/whiten.gdshader" id="7_k78tc"]
[ext_resource type="PackedScene" uid="uid://gaalh2lv6ndo" path="res://scenes/component/devil_trigger_component.tscn" id="8_djgq7"]
[ext_resource type="PackedScene" uid="uid://ca5bd24uu40af" path="res://scenes/component/stagger_component.tscn" id="9_vqb66"]
[ext_resource type="PackedScene" uid="uid://d32oj4so0hfj6" path="res://scenes/component/hurtbox_component.tscn" id="10_b03dp"]
[ext_resource type="Texture2D" uid="uid://bhor2uyywmb4f" path="res://assets/externals/Monster_Creatures_Fantasy/Mushroom/Idle.png" id="11_7bode"]
[ext_resource type="Texture2D" uid="uid://cx3ugb3ue6t82" path="res://assets/externals/Monster_Creatures_Fantasy/Mushroom/Run.png" id="12_8ef3k"]
[ext_resource type="Texture2D" uid="uid://dqt0llmjnjo3" path="res://assets/externals/Monster_Creatures_Fantasy/Mushroom/Death.png" id="13_1wtx3"]
[ext_resource type="PackedScene" uid="uid://bupu5dd5xxdoo" path="res://scenes/ui/status_container.tscn" id="14_i2vhx"]

[sub_resource type="Animation" id="Animation_gfq0d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/IdleSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/walkSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/deathSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Visuals/walkSprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_hfsjf"]
resource_name = "die"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/deathSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/walkSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/IdleSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/deathSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visuals:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.4, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_nkvcf"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/IdleSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/walkSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/walkSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_apcyk"]
_data = {
"RESET": SubResource("Animation_gfq0d"),
"die": SubResource("Animation_hfsjf"),
"walk": SubResource("Animation_nkvcf")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ooadx"]
resource_local_to_scene = true
shader = ExtResource("7_k78tc")
shader_parameter/whiten = true
shader_parameter/mix_weight = 0.0
shader_parameter/alpha = 1.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n5acc"]
radius = 12.0
height = 34.0

[sub_resource type="CircleShape2D" id="CircleShape2D_khda1"]
radius = 6.0

[node name="SkeletonEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
platform_floor_layers = 4294967041
script = ExtResource("1_vi4kp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
libraries = {
"": SubResource("AnimationLibrary_apcyk")
}

[node name="StatusEffectComponent" parent="." node_paths=PackedStringArray("status_container") instance=ExtResource("2_jlov5")]
status_container = NodePath("../StatusContainer")

[node name="HealthComponent" parent="." instance=ExtResource("3_p8u6a")]
prevent_queue_free = true

[node name="VelocityComponent" parent="." node_paths=PackedStringArray("facing_node") instance=ExtResource("4_kjeee")]
max_speed = 20
acceleration = 3.0
facing_node = NodePath("../Visuals")

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_yhe14")]
drop_percent = 0.9
health_component = NodePath("../HealthComponent")

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("6_cume1")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/walkSprite")
hit_flash_material = SubResource("ShaderMaterial_ooadx")

[node name="DevilTriggerComponent" parent="." node_paths=PackedStringArray("velocity_component") instance=ExtResource("8_djgq7")]
velocity_component = NodePath("../VelocityComponent")

[node name="StaggerComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("9_vqb66")]
damage_threshould = 4.0
health_component = NodePath("../HealthComponent")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component", "status_effect_component") instance=ExtResource("10_b03dp")]
position = Vector2(0, -7)
health_component = NodePath("../HealthComponent")
status_effect_component = NodePath("../StatusEffectComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -10)
shape = SubResource("CapsuleShape2D_n5acc")

[node name="Visuals" type="Node2D" parent="."]
position = Vector2(-2, -30)

[node name="IdleSprite" type="Sprite2D" parent="Visuals"]
position = Vector2(2, 8)
scale = Vector2(0.85, 0.85)
texture = ExtResource("11_7bode")
hframes = 4

[node name="walkSprite" type="Sprite2D" parent="Visuals"]
visible = false
position = Vector2(2, 8)
scale = Vector2(0.85, 0.85)
texture = ExtResource("12_8ef3k")
hframes = 8
frame = 1

[node name="deathSprite" type="Sprite2D" parent="Visuals"]
visible = false
position = Vector2(2, 8)
scale = Vector2(0.85, 0.85)
texture = ExtResource("13_1wtx3")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_khda1")

[node name="StatusContainer" parent="." instance=ExtResource("14_i2vhx")]
offset_left = 0.0
offset_top = -31.0
offset_right = 0.0
offset_bottom = -31.0
